--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 MONGO_URL = mongodb+srv://fahadsatti45:fahad%40..,,@cluster45.yzqiswx.mongodb.net/crud
 PORT = 800
-node_modules
+EMAIL_USER=fahadsatti965@gmail.com
+EMAIL_PASS=rfch knck oqoc hrmi
+EMAIL_TO=fahadsatti45@gmail.com
+
