--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   },
   "name": "backend",
